# car-damage-detection

./: .gitignore  Dockerfile  README.md  app.py  conftest.py  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: aws.yml
flask_app/: app.py  predictor.py
flask_app/static/css/: style.css
flask_app/templates/: result.html
models/: .gitignore
src/: config.py  data_prep.py  dataset.py  ensamble.py  ensemble.py  evaluate.py  gradcam.py  model.py  predictor.py  train.py  utils.py
static/css/: style.css
templates/: index.html  login.html  result.html
tests/: fixture.py  test_app.py  test_auth.py  test_config.py  test_utils.py
utils/: auth.py  utils.py
