[project]
name = "car-damage-severity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff] 
line-length = 100
target-version = "py311"

[tool.ruff.lint] 
select = ["E", "F", "I"] # E=style, F=pyflakes errors, I=import sorting 

[tool.mypy] 
python_version = "3.11" 
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options] 
testpaths = ["tests"]
